--- a/src/globals.css
+++ b/src/globals.css
@@ -117,7 +117,7 @@
     @apply scroll-smooth;
   }
   body {
-    @apply bg-background text-foreground font-sans;
+    @apply bg-background text-foreground font-inter;
     /* font-feature-settings: "rlig" 1, "calt" 1; */
     font-synthesis-weight: none;
     text-rendering: optimizeLegibility;
